tests/semantic/fact_number2/fact_number2.err
Error: Relation expects value of type number but got argument of type symbol constant in file fact_number2.dl at line 8
F("1000","0002").
---------^--------
1 errors generated, evaluation aborted
